--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-cli serve --mode development --hot --host 0.0.0.0",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "webpack --mode production",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gh-pages": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "xlsx": "0.13.4"
